--- a/gr17test.html
+++ b/gr17test.html
@@ -13,11 +13,11 @@
 
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
-        <a-marker type="pattern" url="patterns/pattern-PLAN_AR_3.patt">
+        <a-marker type="pattern" url="patterns/pattern-marker-patt.patt">
             <a-entity
             position="0 0 0"
             scale="1 1 1"
-            obj-model="obj: url(/media/3D_sala.obj);mtl: url(/media/3D_sala.mtl);"
+            obj-model="obj: url(/media/M-CoC_iOS_HERO_Peter_Parker_Spider-Man_Stark_Enhanced.obj);mtl: url(/media/M-CoC_iOS_HERO_Peter_Parker_Spider-Man_Stark_Enhanced.mtl);"
             > </a-entity>
         </a-marker>
 
