--- a/gr17test.html
+++ b/gr17test.html
@@ -17,7 +17,7 @@
             <a-entity
             position="0 0 0"
             scale="1 1 1"
-            obj-model="obj: url(/media/M-CoC_iOS_HERO_Peter_Parker_Spider-Man_Stark_Enhanced.obj);mtl: url(/media/M-CoC_iOS_HERO_Peter_Parker_Spider-Man_Stark_Enhanced.mtl);"
+            obj-model="obj: url(CUBO RUBIK 3X3 .obj)"
             > </a-entity>
         </a-marker>
 
