--- a/gr17test.html
+++ b/gr17test.html
@@ -17,7 +17,7 @@
             <a-entity
             position="0 0 0"
             scale="1 1 1"
-            obj-model="obj: url(/media/cubo.obj)"
+            obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
             > </a-entity>
         </a-marker>
 
