--- a/gr17test.html
+++ b/gr17test.html
@@ -18,7 +18,8 @@
             position="0 0 0"
             scale="1 1 1"
             obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
-            > </a-entity>
+             <a-animation attribute=”rotation” dur=”10000″ to=”0 360 0″ repeat=”indefinite”></a-animation>
+                > </a-entity>
         </a-marker>
 
         <a-entity camera></a-entity>
