--- a/gr17test.html
+++ b/gr17test.html
@@ -20,11 +20,10 @@
             obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
              <a-entity>
   <a-entity position="5 0 0"></a-entity>
-  <a-animation attribute="rotation"
-               dur="10000"
-               fill="forwards"
-               to="0 360 0"
-               repeat="indefinite"></a-animation>
+  <entità-a rotazione=" 0 0 0" animazione="proprietà: rotazione; a: 0 360 0; ciclo: vero; dur: 10000"><a-sferaposizione>entità-a</ >a-sfera</>"verdemare medio"=colore"5 0 0"=
+          
+
+
 </a-entity>
         </a-marker>
 
