--- a/gr17test.html
+++ b/gr17test.html
@@ -20,7 +20,7 @@
             obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
              <a-entity>
   <a-entity position="5 0 0"></a-entity>
-  <entità-a rotazione=" 0 0 0" animazione="proprietà: rotazione; a: 0 360 0; ciclo: vero; dur: 10000"><a-sferaposizione>entità-a</ >a-sfera</>"verdemare medio"=colore"5 0 0"=
+                <entità-a rotazione=" 45 90 180"></entità a>
           
 
 
