--- a/gr17test.html
+++ b/gr17test.html
@@ -20,7 +20,7 @@
             obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
              <a-entity>
   <a-entity position="5 0 0"></a-entity>
-                <entità-a rotazione=" 45 90 180"></entità a>
+                 animation__rotate = "property: rotation; dur: 8000; easing: linear; dir: normal; from:0 0 0; to: 0 360 0; loop: true;">
           
 
 
