--- a/gr17test.html
+++ b/gr17test.html
@@ -20,12 +20,9 @@
             obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
              <a-entity>
   <a-entity position="5 0 0"></a-entity>
-                 animation__rotate = "property: rotation; dur: 8000; easing: linear; dir: normal; from:0 0 0; to: 0 360 0; loop: true;">
-          
-
-
-</a-entity>
-        </a-marker>
+                animation__rotate = "property: rotation; dur: 8000; easing: linear; dir: normal; from:0 0 0; to: 0 360 0; loop: true;">
+        </a-sphere>
+    </a-marker> 
 
         <a-entity camera></a-entity>
 
