--- a/gr17test.html
+++ b/gr17test.html
@@ -20,7 +20,7 @@
             obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
              <a-entity>
   <a-entity position="5 0 0"></a-entity>
-                animation__rotate = "property: rotation; dur: 8000; easing: linear; dir: normal; from:0 0 0; to: 0 360 0; loop: true;">
+                <a-box position="-1 1.6 -5" animation="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: true" color="tomato"></a-box>
         </a-sphere>
     </a-marker> 
 
