--- a/gr17test.html
+++ b/gr17test.html
@@ -19,9 +19,10 @@
             scale="1 1 1"
             obj-model="obj: url(/media/spiderman.obj);mtl: url(/media/spiderman.mtl);"
              <a-entity>
-  <a-entity position="5 0 0"></a-entity>
-                <a-box position="-1 1.6 -5" animation="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: true" color="tomato"></a-box>
-        </a-sphere>
+                <a-entity position="5 0 0"></a-entity>
+                <a-box position="-1 1.6 -5" 
+                animation="property: rotation; dur: 6000; to:0 360 0; loop: true; easing: linear;"
+                > </a-entity>
     </a-marker> 
 
         <a-entity camera></a-entity>
