--- a/prova.html
+++ b/prova.html
@@ -19,8 +19,13 @@
             scale="1 1 1"
             obj-model="obj: url(/media/Mario.obj);"
             <a-scene>
-                <a-entity id="scene" gltf-model="#scene" position="0 0 -5" scale="0.1 0.1 0.1" animation-mixer="clip: scene;"></a-entity>
-        <a-camera></a-camera>
+               <a-scene>
+    <a-assets>
+        <a-asset-item id="scene" src="animazioni/scene.gltf"></a-asset-item>
+    </a-assets>
+
+    <a-entity gltf-model="#scene" animation-mixer></a-entity>
+</a-scene>
     </a-scene>
 
             > </a-entity>
