--- a/prova.html
+++ b/prova.html
@@ -26,14 +26,8 @@
 
     <a-entity gltf-model="#scene" animation-mixer></a-entity>
 </a-scene>
-    </a-scene>
-
-            > </a-entity>
-    </a-marker> 
-
-        <a-entity camera></a-entity>
-
-    </a-scene>
-
+   <a-entity gltf-model="#dancingModel" animation-mixer="clip: *;"></a-entity>
+            </a-scene>
+                
 </body>
 </html>
