--- a/prova.html
+++ b/prova.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html>
-<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-<!-- we import arjs version without NFT but with marker + location based support -->
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR Dancing Omino</title>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 
 <body>
-
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
+        <!-- Marker con pattern -->
         <a-marker type="pattern" url="patterns/pattern-marker.patt">
-            <a-entity
-            position="0 0 0"
-            scale="1 1 1"
-            obj-model="obj: url(/media/Mario.obj);"
-            <a-scene>
-<a-scene>
-    <a-assets>
-        <a-asset-item id="scene" src="animazioni/scene.gltf"></a-asset-item>
-    </a-assets>
 
-    <a-entity gltf-model="#scene" animation-mixer></a-entity>
-</a-scene>
-  
-                
+            <!-- Entità AR con modello 3D e animazione -->
+            <a-entity position="0 0 0" scale="1 1 1" obj-model="obj: url(/media/Mario.obj);">
+                <a-assets>
+                    <!-- Carica il modello 3D per l'animazione -->
+                    <a-asset-item id="scene" src="animazioni/scene.gltf"></a-asset-item>
+                </a-assets>
+
+                <!-- Aggiungi il modello 3D alla scena e attiva l'animazione mixer -->
+                <a-entity gltf-model="#scene" animation-mixer></a-entity>
+            </a-entity>
+
+        </a-marker>
+    </a-scene>
 </body>
+
 </html>
