--- a/AR.html
+++ b/AR.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
+<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+<!-- we import arjs version without NFT but with marker + location based support -->
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 
 <body>
+
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
         <a-marker type="pattern" url="patterns/pattern-marker.patt">
             <a-entity position="0 0 0" scale="1 1 1" obj-model="obj: url(/media/Mario.obj);">
