--- a/AR.html
+++ b/AR.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
   </head>
 
-  <body>
+
+            <body>
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
       <a-marker type="pattern" url="patterns/pattern-marker.patt">
-        <a-entity
+        <!-- Utilizza il componente a-gltf-model per caricare il modello .glTF -->
+        <a-gltf-model
           position="0 0 0"
           scale="0.5 0.5 0.5"
-          obj-model="obj: url(/media/Mario.obj);"
+          src="/animazioni/scene.gltf"
           animation__walk="property: position; dur: 5000; to: 0 0 -10; easing: linear; startEvents: walk;"
         ></a-entity>
       </a-marker>
