--- a/mondo.html
+++ b/mondo.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+<!-- we import arjs version without NFT but with marker + location based support -->
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
+<head>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+</head>
+
+<body>
+
+  <body>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
+        <a-marker type="pattern" url="patterns/pattern-marker.patt">
+            <a-entity position="0 0 0" scale="1 1 1" obj-model="obj: url(/media/Mario.obj);">
+                <a-assets>
+                    <a-asset-item id="scene" src="animazioni/scene.gltf"></a-asset-item>
+                </a-assets>
+                <a-entity gltf-model="#scene" animation-mixer></a-entity>
+            </a-entity>
+        </a-marker>
+    </a-scene>
+</body>
+
+</html>
