--- a/mondo.html
+++ b/mondo.html
@@ -14,7 +14,7 @@
   <body>
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
         <a-marker type="pattern" url="patterns/pattern-marker.patt">
-            <a-entity position="0 0 0" scale="1 1 1" obj-model="obj: url(/media/Mario.obj);">
+            <a-entity position="0 0 0" scale="1 1 1" obj-model="obj: url(/media/mondo_anna_giardina.glb);">
                 <a-assets>
                     <a-asset-item id="scene" src="animazioni/scene.gltf"></a-asset-item>
                 </a-assets>
