--- a/mondo.html
+++ b/mondo.html
@@ -11,17 +11,20 @@
 
 <body>
 
-  <body>
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
-        <a-marker type="pattern" url="patterns/pattern-marker.patt">
-            <a-entity position="0 0 0" scale="1 1 1" obj-model="obj: url(/media/mondo_anna_giardina.glb);">
-                <a-assets>
-                    <a-asset-item id="scene" src="animazioni/scene.gltf"></a-asset-item>
-                </a-assets>
-                <a-entity gltf-model="#scene" animation-mixer></a-entity>
-            </a-entity>
-        </a-marker>
-    </a-scene>
-</body>
 
+        <a-marker type="pattern" url="patterns/pattern-marker.patt">
+            <a-entity
+            position="0 0 0"
+            scale="1 1 1"
+            obj-model="obj: url(/media/mondo_anna_giardina.glb);"
+            animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
+            > </a-entity>
+    </a-marker> 
+
+        <a-entity camera></a-entity>
+
+    </a-scene>
+
+</body>
 </html>
