--- a/mondo.html
+++ b/mondo.html
@@ -15,7 +15,7 @@
             <a-entity
                 position="0 0 0"
                 scale="1 1 1"
-                obj-model="obj: #world-obj; mtl: #world-mtl;"
+                obj-model="obj: url(/media/world.obj); mtl: url(/media/world.mtl);"
                 animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;">
             </a-entity>
         </a-marker> 
@@ -24,7 +24,7 @@
 
         <!-- Importa il modello OBJ e la texture -->
         <a-assets>
-            <img id="world-texture" src="/media/world_texture.jpg">
+            <img id="world-texture" src="/media/world_e.jpg">
             <a-asset-item id="world-obj" src="/media/world.obj"></a-asset-item>
             <a-asset-item id="world-mtl" src="/media/world.mtl"></a-asset-item>
         </a-assets>
