--- a/mondo.html
+++ b/mondo.html
@@ -24,7 +24,7 @@
 
         <!-- Importa il modello OBJ e la texture -->
         <a-assets>
-            <img id="world-texture" src="/media/world_e.jpg">
+            <img id="world-texture" src="/media/world_giant.jpg">
             <a-asset-item id="world-obj" src="/media/world.obj"></a-asset-item>
             <a-asset-item id="world-mtl" src="/media/world.mtl"></a-asset-item>
         </a-assets>
