--- a/mondo.html
+++ b/mondo.html
@@ -22,8 +22,8 @@
         <!-- Importa il modello OBJ e la texture -->
         <a-assets>
             <img id="world-texture" src="/media/world_giant.jpg">
-            <a-asset-item id="world-obj" src="/media/world.obj"></a-asset-item>
-            <a-asset-item id="world-mtl" src="/media/world.mtl"></a-asset-item>
+            <a-asset-item id="world.obj" src="/media/world.obj"></a-asset-item>
+            <a-asset-item id="world.mtl" src="/media/world.mtl"></a-asset-item>
         </a-assets>
     </a-scene>
 
