--- a/mondo.html
+++ b/mondo.html
@@ -12,7 +12,7 @@
             <a-entity
                 position="0 0 0"
                 scale="1 1 1"
-                obj-model="obj: url(/media/world.obj); mtl: url(/media/world.mtl);"
+                obj-model="obj: url(/media/Earth_LowPoly.obj);"
                 animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;">
             </a-entity>
         </a-marker> 
