--- a/mondo.html
+++ b/mondo.html
@@ -3,28 +3,27 @@
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
+<head>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 
 <body>
 
     <a-scene vr-mode-ui="enabled: false" embedded arjs>
+
         <a-marker type="pattern" url="patterns/pattern-marker.patt">
             <a-entity
-                position="0 0 0"
-                scale="1 1 1"
-                obj-model="obj: url(/media/Earth_LowPoly.obj);"
-                animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;">
-            </a-entity>
-        </a-marker> 
+            position="0 0 0"
+            scale="1 1 1"
+            obj-model="obj: url(/media/Earth_LowPoly.obj);"
+            animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
+            > </a-entity>
+    </a-marker> 
 
         <a-entity camera></a-entity>
 
-        <!-- Importa il modello OBJ e la texture -->
-        <a-assets>
-            <img id="world-texture" src="/media/world_giant.jpg">
-            <a-asset-item id="world.obj" src="/media/world.obj"></a-asset-item>
-            <a-asset-item id="world.mtl" src="/media/world.mtl"></a-asset-item>
-        </a-assets>
     </a-scene>
 
 </body>
