--- a/mondo.html
+++ b/mondo.html
@@ -19,7 +19,7 @@
             scale="1 1 1"
             obj-model="obj: url(/media/Earth_LowPoly.obj);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
-            <a-material src="/surface_diffuse.png"></a-material>
+            <a-material src=" url(/surface_diffuse.png"></a-material>);
             > </a-entity>
     </a-marker> 
 
