--- a/mondo.html
+++ b/mondo.html
@@ -17,7 +17,7 @@
             <a-entity
             position="0 0 0"
             scale="1 1 1"
-            obj-model="obj: url(/media/earth.obj); mtl: url(/media/earth.mtl);"
+            obj-model="obj: url(/media/earth1.obj); mtl: url(/media/earth1.mtl);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
             <a-material src=" url(/surface_diffuse.png"></a-material>);
             > </a-entity>
