--- a/mondo.html
+++ b/mondo.html
@@ -17,7 +17,7 @@ rth<!DOCTYPE html>
             <a-entity
             position="0 0 0"
             scale="1 1 1"
-            obj-model="obj: url(/media/terra.obj);"
+            obj-model="obj: url(/media/earth.glb);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
             > </a-entity>
     </a-marker> 
