--- a/mondo.html
+++ b/mondo.html
@@ -1,4 +1,4 @@
-rth<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
@@ -17,7 +17,7 @@ rth<!DOCTYPE html>
             <a-entity
             position="0 0 0"
             scale="1 1 1"
-            obj-model="obj: url(/media/earth.glb);"
+            obj-model="obj: url(/media/terra.obj);mtl: url(/media/terra.mtl);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
             > </a-entity>
     </a-marker> 
