--- a/mondo.html
+++ b/mondo.html
@@ -17,7 +17,7 @@
             <a-entity
             position="0 0 0"
             scale="0.01 0.01 0.01"
-            obj-model="obj: url(/media/terra.obj);mtl: url(/media/world.mtl);"
+            obj-model="obj: url(/media/earth4.obj);mtl: url(/media/earth4.mtl);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
             > </a-entity>
     </a-marker> 
