--- a/mondo.html
+++ b/mondo.html
@@ -16,8 +16,8 @@
         <a-marker type="pattern" url="patterns/pattern-marker.patt">
             <a-entity
             position="0 0 0"
-            scale="0.5 0.5 0.5"
-            obj-model="obj: url(/media/world.obj);mtl: url(/media/world.mtl);"
+            scale="1 1 1"
+            obj-model="obj: url(/media/EARTH.obj);mtl: url(/media/EARTH.mtl);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
             > </a-entity>
     </a-marker> 
