--- a/mondo.html
+++ b/mondo.html
@@ -19,8 +19,10 @@
             scale="0.1 0.1 0.1"
             obj-model="obj: url(/media/EARTH.obj);mtl: url(/media/EARTH.mtl);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
-            > </a-entity>
-    </a-marker> 
+ <a-entity material="src: url(/media/texture.jpg);"></a-entity>
+                
+            </a-entity>
+        </a-marker> 
 
         <a-entity camera></a-entity>
 
