--- a/mondo.html
+++ b/mondo.html
@@ -17,8 +17,8 @@
                 obj-model="obj: url(/media/EARTH.obj); mtl: url(/media/EARTH.mtl);"
                 animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;">
 
-                <!-- Aggiunta del materiale con texture -->
-                <a-entity material="src: url(/media/tex.jpg);"></a-entity>
+                <!-- Aggiunta del materiale con texture e regolazione della trasparenza -->
+                <a-entity material="src: url(/media/tex.jpg); opacity: 0.5;"></a-entity>
                 
             </a-entity>
         </a-marker> 
