--- a/mondo.html
+++ b/mondo.html
@@ -17,7 +17,7 @@
             <a-entity
             position="0 0 0"
             scale="0.1 0.1 0.1"
-            obj-model="obj: url(/media/terra.obj);mtl: url(/media/terra.mtl);"
+            obj-model="obj: url(/media/Earth6.obj);mtl: url(/media/Earth6.mtl);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
             > </a-entity>
     </a-marker> 
