--- a/mondo.html
+++ b/mondo.html
@@ -19,6 +19,7 @@
             scale="0.001 0.001 0.001"
             obj-model="obj: url(/media/Earth.obj);"
             animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
+                 <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
             > </a-entity>
     </a-marker> 
 
