--- a/mondo2.html
+++ b/mondo2.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+</head>
+<body>
+
+<a-scene vr-mode-ui="enabled: false" embedded arjs>
+
+    <a-marker type="pattern" url="patterns/pattern-marker.patt">
+        <a-entity position="0 0 0" scale="0.02 0.02 0.02"
+            obj-model="obj: url(/media/Earth.obj);"
+            animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;">
+
+            <!-- Chiudi prima l'elemento a-entity del modello 3D -->
+        </a-entity>
+
+        <!-- Aggiungi l'elemento a-entity per il materiale della texture -->
+        <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+
+    </a-marker> 
+
+    <a-entity camera></a-entity>
+
+</a-scene>
+
+<script>
+    // Funzione per aggiungere una scritta dopo un certo periodo di tempo
+    setTimeout(function() {
+        // Creazione di un elemento testo
+        var text = document.createElement('a-text');
+        text.setAttribute('value', 'Benvenuto!');
+        text.setAttribute('position', '0 0.5 -1'); // Posizione della scritta
+        text.setAttribute('color', 'red'); // Colore del testo
+        text.setAttribute('align', 'center'); // Allineamento del testo
+        text.setAttribute('scale', '2 2 2'); // Dimensione del testo
+
+        // Aggiunta dell'elemento testo alla scena
+        var scene = document.querySelector('a-scene');
+        scene.appendChild(text);
+    }, 3000); // Aggiungi la scritta dopo 3 secondi (3000 millisecondi)
+</script>
+
+</body>
+</html>
 
