--- a/mondo2.html
+++ b/mondo2.html
@@ -34,7 +34,7 @@
         var text = document.createElement('a-text');
         text.setAttribute('value', 'Benvenuto!');
         text.setAttribute('position', '0 0.5 -1'); // Posizione della scritta
-        text.setAttribute('color', 'white'); // Colore del testo
+        text.setAttribute('color', 'red'); // Colore del testo
         text.setAttribute('align', 'center'); // Allineamento del testo
         text.setAttribute('scale', '1 1 1'); // Dimensione del testo
 
