--- a/mondo2.html
+++ b/mondo2.html
@@ -33,8 +33,8 @@
         // Creazione di un elemento testo
         var text = document.createElement('a-text');
         text.setAttribute('value', 'Benvenuto!');
-        text.setAttribute('position', '0 0 -2'); // Posizione della scritta
-        text.setAttribute('color', 'red'); // Colore del testo
+        text.setAttribute('position', '0 -0.5 -2'); // Posizione della scritta
+        text.setAttribute('color', 'white'); // Colore del testo
         text.setAttribute('align', 'center'); // Allineamento del testo
         text.setAttribute('scale', '1 1 1'); // Dimensione del testo
 
@@ -46,3 +46,4 @@
 
 </body>
 </html>
+
