--- a/mondo2.html
+++ b/mondo2.html
@@ -32,11 +32,11 @@
     setTimeout(function() {
         // Creazione di un elemento testo
         var text = document.createElement('a-text');
-        text.setAttribute('value', 'Benvenuto!');
+        text.setAttribute('value', 'spagna');
         text.setAttribute('position', '0 -0.5 -2'); // Posizione della scritta
         text.setAttribute('color', 'white'); // Colore del testo
         text.setAttribute('align', 'center'); // Allineamento del testo
-        text.setAttribute('scale', '1 1 1'); // Dimensione del testo
+        text.setAttribute('scale', '0.8 0.8 0.8'); // Dimensione del testo
 
         // Aggiunta dell'elemento testo alla scena
         var scene = document.querySelector('a-scene');
