--- a/mondo2.html
+++ b/mondo2.html
@@ -13,15 +13,10 @@
     <a-marker type="pattern" url="patterns/pattern-marker.patt">
         <a-entity position="0 0 0" scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
-            animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;">
-
-            <!-- Chiudi prima l'elemento a-entity del modello 3D -->
-        </a-entity>
-
-        <!-- Aggiungi l'elemento a-entity per il materiale della texture -->
-        <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
-
-    </a-marker> 
+     animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
+                 <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+            > </a-entity>
+    </a-marker>
 
     <a-entity camera></a-entity>
 
