--- a/mondo3.html
+++ b/mondo3.html
@@ -15,14 +15,9 @@
             obj-model="obj: url(/media/Earth.obj);"
             animation__rotate="property: rotation; dur: 6000; to: 0 720 0; loop: false; easing: linear;"
             animation__showPin="property: scale; dur: 500; to: 0.3 0.3 0.3; delay: 6000;">
-
-            <!-- Chiudi prima l'elemento a-entity del modello 3D -->
-            <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
-
-            <!-- Pin sul modello -->
-            <a-image id="pin" src="/media/pin.png" position="0 1.2 0.3" scale="0"></a-image>
-
-        </a-entity>
+ <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+        <a-image src="/media/pin.png" position="0 1.2 0.3" scale="0.3 0.3 0.3"></a-image>
+            > </a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
