--- a/mondo3.html
+++ b/mondo3.html
@@ -17,9 +17,8 @@
                        startEvents: markerFound;"
             animation__showPin="property: components.scale.scale; dur: 500; to: 0.3 0.3 0.3; 
                                 startEvents: animationcomplete">
-
-            <!-- Chiudi prima l'elemento a-entity del modello 3D -->
-            <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+             <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+            > </a-entity>
 
             <!-- Pin sul modello -->
             <a-image id="pin" src="/media/pin.png" position="0 1.2 0.3" scale="0"></a-image>
