--- a/mondo3.html
+++ b/mondo3.html
@@ -15,9 +15,11 @@
             obj-model="obj: url(/media/Earth.obj);"
             animation="property: rotation; dur: 6000; to: 0 720 0; loop: false; easing: linear; 
                        startEvents: markerFound;"
-            animation__showPin="property: components.scale.scale; dur: 500; to: 0.3 0.3 0.3; 
-                                startEvents: animationcomplete">
+
+            <!-- Chiudi prima l'elemento a-entity del modello 3D -->
             <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+
+            <!-- Pin sul modello -->
             <a-image id="pin" src="/media/pin.png" position="0 1.2 0.3" scale="0"></a-image>
 
         </a-entity>
@@ -31,7 +33,16 @@
     // Funzione per far apparire il pin dopo il completamento della rotazione
     document.querySelector('a-marker').addEventListener('markerFound', function () {
         var model = document.querySelector('[obj-model]');
-        model.emit('animationcomplete');
+        var pin = document.getElementById('pin');
+        
+        // Avvia l'animazione di rotazione del modello
+        model.emit('animationstart');
+        
+        // Attendi la fine dell'animazione di rotazione del modello
+        setTimeout(function() {
+            // Avvia l'animazione di apparizione del pin
+            pin.emit('animationstart');
+        }, 6000); // Aggiungi il pin dopo il completamento della rotazione (6000 millisecondi)
     });
 </script>
 
