--- a/mondo3.html
+++ b/mondo3.html
@@ -13,14 +13,16 @@
     <a-marker type="pattern" url="patterns/pattern-marker.patt">
         <a-entity position="0 0 0" scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
-            animation__rotate="property: rotation; dur: 6000; to: 0 720 0; loop: false; easing: linear;"
-            animation__showPin="property: components.scale.scale; startEvents: animationcomplete; to: 0.3 0.3 0.3; delay: 6000;">
+            animation="property: rotation; dur: 6000; to: 0 720 0; loop: false; easing: linear; 
+                       startEvents: markerFound;"
 
             <!-- Chiudi prima l'elemento a-entity del modello 3D -->
             <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
 
             <!-- Pin sul modello -->
-            <a-image id="pin" src="/media/pin.png" position="0 1.2 0.3" scale="0"></a-image>
+            <a-image id="pin" src="/media/pin.png" position="0 1.2 0.3" scale="0">
+                <a-animation begin="animationcomplete" attribute="scale" to="0.3 0.3 0.3" dur="500"></a-animation>
+            </a-image>
 
         </a-entity>
     </a-marker>
