--- a/mondo2.html
+++ b/mondo2.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
+<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+<!-- we import arjs version without NFT but with marker + location based support -->
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
 <head>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
+
 <body>
 
-<a-scene vr-mode-ui="enabled: false" embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
-    <a-marker type="pattern" url="patterns/pattern-marker.patt">
-        <a-entity position="0 0 0" scale="0.02 0.02 0.02"
+        <a-marker type="pattern" url="patterns/pattern-marker.patt">
+            <a-entity
+            position="0 0 0"
+            scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
             animation="property: rotation; dur: 6000; to: 0 720 0; loop: false; easing: linear; 
                        startEvents: markerFound;"
