--- a/mondo2.html
+++ b/mondo2.html
@@ -13,15 +13,9 @@
     <a-marker type="pattern" url="patterns/pattern-marker.patt">
         <a-entity position="0 0 0" scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
-            animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;">
-
-            <!-- Materiale per la texture del modello -->
-            <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
-
-            <!-- Pin sul modello -->
-            <a-image src="/media/pin.png" position="0 1.5 0" scale="0.05 0.05 0.05"></a-image>
-
-        </a-entity>
+            animation="property: rotation; dur: 6000; to: 0 360 0; loop: true; easing: linear;"
+                 <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+            > </a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
