--- a/mondo3.html
+++ b/mondo3.html
@@ -13,14 +13,14 @@
     <a-marker type="pattern" url="patterns/pattern-marker.patt">
         <a-entity position="0 0 0" scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
-            animation="property: rotation; dur: 5000; to: 0 360 0; loop: true; easing: linear;"
+            animation="property: rotation; dur: 5000; to: 0 360 0; loop: false; easing: linear;"
             id="earthModel"> <!-- Aggiungi un ID all'oggetto 3D -->
 
             <!-- Materiale per la texture del modello -->
             <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
 
             <!-- Aggiungi il pin come componente separato -->
-            <a-entity id="pin" visible="false" position="0 1.5 0" scale="0.05 0.05 0.05">
+            <a-entity id="pin" visible="false" position="0 0.5 0" scale="0.05 0.05 0.05">
                 <a-image src="/media/pin.png"></a-image>
             </a-entity>
 
