--- a/mondo3.html
+++ b/mondo3.html
@@ -15,9 +15,8 @@
             obj-model="obj: url(/media/Earth.obj);"
             animation="property: rotation; dur: 5000; to: 0 360 0; loop: false; easing: linear;"
             id="earthModel"> <!-- Aggiungi un ID all'oggetto 3D -->
-
-            <!-- Materiale per la texture del modello -->
-            <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+             <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+            > </a-entity>
 
             <!-- Aggiungi il pin come componente separato -->
             <a-entity id="pin" visible="false" position="0 0.5 0" scale="0.05 0.05 0.05">
