--- a/mondo3.html
+++ b/mondo3.html
@@ -14,23 +14,26 @@
         <a-entity position="0 0 0" scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
               animation="property: rotation; dur: 5000; to: 0 360 0; loop: true; easing: linear;"
-             id="earthModel"> <!-- Aggiungi un ID all'oggetto 3D -->
-                 <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
+             <a-entity material="src: url(/media/Earth_Diffuse.jpeg);"></a-entity>
             > </a-entity>
-         <a-entity id="pin" visible="false" position="0 1.2 0" scale="0.05 0.05 0.05">
+         <a-entity id="pin" visible="false" position="0 1.2 0" scale="0.2 0.2 0.2">
                 <a-image src="/media/pin.png"></a-image>
             </a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
 
+
 </a-scene>
 
 <script>
-    // Funzione per far comparire il pin dopo un certo periodo di tempo
+    // Funzione per far comparire il pin e interrompere l'animazione del modello dopo un certo periodo di tempo
     setTimeout(function() {
         var pin = document.getElementById('pin');
         pin.setAttribute('visible', true); // Imposta il pin visibile
+
+        var earthModel = document.getElementById('earthModel');
+        earthModel.removeAttribute('animation'); // Rimuovi l'animazione del modello
     }, 5000); // Dopo 5 secondi, quando l'animazione del modello 3D è completata
 
 </script>
