--- a/allestimento2.html
+++ b/allestimento2.html
@@ -24,7 +24,7 @@
          <a-entity
             position="0 0.01 0" 
             scale="0.026 0.026 0.026" 
-            obj-model="obj: url(/media/percorso.obj); mtl: url(/media/percorso.mtl);"
+            obj-model="obj: url(/media/perc.obj); mtl: url(/media/perc.mtl);"
             
         ></a-entity>
 
