--- a/allestimento2.html
+++ b/allestimento2.html
@@ -25,6 +25,7 @@
             position="0 0.01 0" 
             scale="0.05 0.05 0.05" 
             obj-model="obj: url(/media/perc.obj); mtl: url(/media/perc.mtl);"
+            animation="property: opacity; from: 0; to: 1; dur: 5000; easing: linear;"
             
         ></a-entity>
 
