--- a/mondo3.html
+++ b/mondo3.html
@@ -10,7 +10,7 @@
 
 <a-scene vr-mode-ui="enabled: false" embedded arjs>
 
-    <a-marker type="pattern" url="patterns/pattern-marker.patt">
+    <a-marker type="pattern" url="patterns/pattern-logo.patt">
         <a-entity position="0 0 0" scale="0.02 0.02 0.02"
             obj-model="obj: url(/media/Earth.obj);"
               animation="property: rotation; dur: 6000; to: 360 450 0; loop: false; easing: linear;"
